--- a/package.json
+++ b/package.json
@@ -1,17 +1,28 @@
 {
-  "name": "new-website",
+  "name": "smlc-website",
+  "author": "Seyed Sina Ghazi Dezfuli",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:css": "NODE_ENV=production npx tailwindcss -i ./styles.css -o ./css/output.css --minify",
+    "build:js": "gulp",
+    "copy-data": "mkdir -p dist/data && cp -R data/* dist/data",
+    "copy-images": "mkdir -p dist/img && cp -R img/* dist/img",
+    "build": "npm run build:css && npm run build:js && npm run copy-data && npm run copy-images"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "CC-BY-4.0",
   "description": "",
   "dependencies": {
     "autoprefixer": "^10.4.20",
+    "del": "^8.0.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14"
+  },
+  "devDependencies": {
+    "gulp": "^5.0.0",
+    "gulp-rev": "^11.0.0",
+    "gulp-rev-replace": "^0.4.4",
+    "gulp-terser": "^2.1.0"
   }
 }
