--- a/package.json
+++ b/package.json
@@ -1,30 +1,48 @@
 {
-  "name": "smlc-website",
-  "author": "Seyed Sina Ghazi Dezfuli",
-  "version": "1.0.0",
-  "main": "index.html",
+  "name": "smlc-cube",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build:css": "NODE_ENV=production npx tailwindcss -i ./styles.css -o ./css/output.css --minify",
-    "build:js": "gulp",
-    "copy-data": "mkdir -p dist/data && cp -R data/* dist/data",
-    "copy-images": "mkdir -p dist/img && cp -R img/* dist/img",
-    "copy-sitemap": "cp -p seo/* dist/",
-    "build": "npm run build:css && npm run build:js && npm run copy-data && npm run copy-images && npm run copy-sitemap",
-    "start": "echo 'Static site. No start command needed.'"
+    "dev": "vite",
+    "lint": "eslint .",
+    "clean": "rimraf dist",
+    "build": "npm run clean && tsc -b && vite build && node verify-build.js",
+    "preview": "vite preview"
   },
-  "keywords": [],
-  "license": "CC-BY-4.0",
-  "description": "",
   "dependencies": {
-    "autoprefixer": "^10.4.20",
-    "del": "^8.0.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "@radix-ui/react-slot": "^1.1.0",
+    "@react-spring/three": "^9.7.5",
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.456.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
+    "tailwind-merge": "^2.5.4",
+    "three": "^0.170.0",
+    "three-mesh-bvh": "^0.8.3"
   },
   "devDependencies": {
-    "gulp": "^5.0.0",
-    "gulp-rev": "^11.0.0",
-    "gulp-rev-replace": "^0.4.4",
-    "gulp-terser": "^2.1.0"
+    "rimraf": "^6.0.1",
+    "chalk": "^5.3.0",
+    "@eslint/js": "^9.14.0",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/three": "^0.170.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.14.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
+    "typescript": "~5.6.3",
+    "typescript-eslint": "^8.14.0",
+    "vite": "^5.4.11"
   }
 }
