--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,24 @@
-# WebStorm
-*.iml
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Directory-based project format:
-.idea/
-.idea/workspace.xml
-**/.idea/workspace.xml
-
-# mac hidden files
-.DS_Store
-
-##other
-node_modules/
+node_modules
 dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
